added item to to-do in read me. Fix contact link.

--- a/readme
+++ b/readme
@@ -46,6 +46,7 @@ THINGS STILL NEED TO DO
 4. Make each Portwist clickable to a larger size w/ lightbox or something.
 5. What happens when user submitted name is too long for one line?
 6. Work Out Horizontal pics. Horizontal background. How does site determine?
+Fix contact us link in terms and conditions. Make it launch default mail client.
 
 
 Things I specifically need to do:
