further fixed the browse button which was not in correct position. Better but still needs work.

--- a/readme
+++ b/readme
@@ -55,6 +55,6 @@ LATER
 2. Fix up the back end/ admin approval page. Fix buttons. Make posts disappear after approval?
 
 Things Max specifically need to do:
-1. Cut off edge home button so it doesn't show on edge of page.
+1. Fix width of active area for browse "button"".
 2. Add instructions about how to submit multiple pictures via email.
 3. Increase size of all Portwists on home page.
