--- a/readme
+++ b/readme
@@ -1,7 +1,8 @@
-portwist!
+## portwist!
 
 http://portwist.com/
 http://portwist.dev/
+
 
 ## admin
 /admin
@@ -16,7 +17,7 @@ script/setup
 ## open portwist code
 
 # launch terminal
-cd code/portwist # get into directory with terminal
+cd ~/code/portwist # get into directory with terminal
 mate . # open all files in the current directory in textmate
 
 
@@ -38,8 +39,18 @@ git add . # add all changed to git's index and prepare to commit
 git stash # stash changes away, note "git stash pop" would bring them back
 
 
-THINGS STILL NEED TO DO
-NOW:
+## deploy to heroku
+
+git push heroku master
+
+
+## max
+1. Fix width of active area for browse "button"".
+2. Add instructions about how to submit multiple pictures via email.
+3. Increase size of all Portwists on home page.
+
+
+# todo 
 1. Fix Terms and Conditions Pop Up. Make terms and conditions box a pop up. Remove it from current static position.
 2. Add instructions on how to email multiple images from iphone to us.
 3. What happens when user submitted name is too long for one line?
@@ -49,11 +60,7 @@ NOW:
 7. Start with (Your Name) and (YOur title) in boxes
 
 
-LATER
+# later
 1. Make Submit form work on iphone. Anyway outside an App? 
 2. Fix up the back end/ admin approval page. Fix buttons. Make posts disappear after approval?
 
-Things Max specifically need to do:
-1. Fix width of active area for browse "button"".
-2. Add instructions about how to submit multiple pictures via email.
-3. Increase size of all Portwists on home page.
