--- a/Readme
+++ b/Readme
@@ -48,6 +48,7 @@ SOON:
 1. On home page: Make name and title divs end at edge of picture and drop down to a second line if they are long. CSS: description_l, description_r
 2. Increase size of all Portwists on home page.
 3. Fix browse button styles. Color, spacing. Make browse button different color after submission?
+4. Make submit button pure CSS
 
 LONG TERM:
 1. Fix up the back end/ admin approval page. Fix buttons. Make posts disappear after approval?
