--- a/Readme
+++ b/Readme
@@ -45,7 +45,8 @@ git push heroku master
 
 
 SOON:
-1. On home page: Make name and title divs end at edge of picture and drop down to a second line if they are long. CSS: description_l, description_r
+1. On home page: Make name and title drop character limit the length of one line.
+2. Make 2 separate line id's. change spacing below so bottom of page has some space. lose some space on top of background image to compensate.
 2. Increase size of all Portwists on home page.
 3. Fix browse button styles. Color, spacing. Make browse button different color after submission?
 4. Make submit button pure CSS
